# experiments

./: CMakeLists.txt  README.md  README.txt
circular_buffer/: CMakeLists.txt
circular_buffer/src/: main.cpp
concurrent_threads/: CMakeLists.txt
concurrent_threads/src/: main.cpp
condition_var/: CMakeLists.txt
condition_var/src/: condition_var.cpp
ctor_dtor/: CMakeLists.txt
ctor_dtor/src/: constructor.h  ctor_dtor_main.cpp  ctor_main.cpp  error.h
doctest_template/: factorial.hpp  factorial_test.cpp
error_handling/: CMakeLists.txt
error_handling/src/: main.cpp
filter-transform/: CMakeLists.txt
filter-transform/src/: filter-transform.cpp
fmt/: CMakeLists.txt
fmt/src/: main.cpp
fmt_test/: CMakeLists.txt
fmt_test/src/: main.cpp
forest/: CMakeLists.txt
forest/src/: forest.cpp
hello/: CMakeLists.txt
hello/src/: main.cpp
implementation_check/: CMakeLists.txt
implementation_check/src/: common_type.hpp  implementation_check.cpp  print_char_table.cpp
instrumented/: CMakeLists.txt
instrumented/include/: instrumented.hpp
instrumented/src/: instrumented.cpp  instrumented_function_calls.cpp  main.cpp
json/: CMakeLists.txt
json/src/: main.cpp
json_io/: CMakeLists.txt
json_io/include/: di8joy.hpp  di8joy_json_io.hpp
json_io/input/: input.json  input_initial.json
json_io/src/: di8joy_json_io.cpp  main.cpp
json_test/: CMakeLists.txt
json_test/include/: json_properties.hpp
json_test/input/: input.json
json_test/src/: main.cpp  properties.cpp
lua_cpp_book/: CMakelists.txt
lua_cpp_book/src/: executor.lua  executor_main.cpp  hello_main.cpp  hello_script_main.cpp  lua_executor.cpp  lua_executor.hpp  lua_type.hpp  script.lua
lua_sol_test/: CMakeLists.txt
lua_sol_test/input/: properties.lua  simple_cfg.lua  usertypes.lua
lua_sol_test/src/: main.cpp  properties.cpp  properties.hpp  properties_main.cpp  properties_parse.cpp  properties_parse.hpp  simple_cfg_main.cpp  usertypes.hpp  usertypes_main.cpp
mdspan/: CMakeLists.txt
mdspan/src/: main.cpp
mdspan_test/: CMakeLists.txt
mdspan_test/src/: main.cpp
module_test/: CMakeLists.txt
module_test/src/: main.cpp
ode_int/: CMakeLists.txt
ode_int/include/: derivatives.hpp  output.hpp  rk4.hpp
ode_int/src/: derivatives.cpp  derivatives.hpp  grid.cpp  grid.hpp  main.cpp  output.cpp  output.hpp  rk4.cpp  rk4.hpp
proxy/: CMakeLists.txt
proxy/include/: json_properties.hpp
proxy/input/: input.json
proxy/src/: json_properties.cpp  main.cpp
raii/: CMakeLists.txt
raii/src/: main.cpp
random_numbers/: lotto_main.cpp  random_num_main.cpp
reference_wrapper/: CMakeLists.txt
reference_wrapper/src/: main.cpp
tinyspline/: CMakeLists.txt
tinyspline/src/: main.cpp
type_erasure/: CMakeLists.txt
type_erasure/include/: use_TE_unique_ptr.hpp  use_any.hpp  use_inheritance.hpp
type_erasure/src/: main.cpp  use_TE_unique_ptr.cpp  use_any.cpp  use_inheritance.cpp  use_inheritance.hpp
variadic_test/: CMakeLists.txt
variadic_test/include/: variadic.hpp
variadic_test/src/: main.cpp
vtk/: CMakeLists.txt
vtk/src/: write_vtp.cpp
